# mkdocs-material-extensions

./: .coveragerc  .dictionary  .pyspelling.yml  MANIFEST.in  README.md  changelog.md  hatch_build.py  pyproject.toml  setup.py  tox.ini
.github/: labels.yml
.github/workflows/: build.yml  deploy.yml  pullrequest.yml
materialx/: __meta__.py  emoji.py
requirements/: docs.txt  test.txt
tests/: util.py
tests/extensions/: test_emoji.py
